# bookstore

./: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml  wait_for_db.py
bookstore/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/models/: test_order.py
order/tests/serializers/: test_order_serializer.py
order/tests/viewsets/: test_order_viewsets.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/models/: test_category.py  test_product.py
product/tests/serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
