[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [
    {name = "Cauan Nascimento",email = "caunas1337@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-extensions (>=4.1,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-django (>=4.12.0,<5.0.0)"
]
